# gym-location-model

./: README.md  gpt2_next_shop.ipynb  llma_next_shop.ipynb  llma_next_shop.py  poi_trajectory_prediction_step1.ipynb  poi_transformer_advanced.ipynb  research_papers.md  synthetic_gps_trajectories.ipynb
poi-prediction/: README.md  demo.py  main.py  modality_comparison.py  pyproject.toml
poi-prediction/experiments/: next_poi_transformer_advanced.ipynb  notes.md  pseudo_impl.py
poi-prediction/poi_prediction/: cli.py
poi-prediction/poi_prediction/config/: model_config.py
poi-prediction/poi_prediction/data/: data_structures.py  dataset.py  synthetic_generator.py
poi-prediction/poi_prediction/models/: attention.py  embeddings.py  poi_transformer.py
poi-prediction/poi_prediction/training/: metrics.py  trainer.py
