[project]
name = "poi-prediction-transformer"
version = "0.1.0"
description = "Next POI Prediction using Cross-Attention Transformer"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "fbalicchia", email = "fbalicchia@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "pydantic>=2.0.0",
    "hydra-core>=1.3.0",
    "wandb>=0.15.0",
    "tensorboard>=2.10.0",
]

[project.scripts]
poi-train = "poi_prediction.cli:train_cli"
poi-predict = "poi_prediction.cli:predict_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poi_prediction"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.15.0",
]
